Make mock scrollbars nicer and fix small overflow bug

--- a/mockup/css/screen.sass
+++ b/mockup/css/screen.sass
@@ -10,6 +10,16 @@ html, body
     background: #77a
     font-family: $standard-font-stack
 
+// make all scrollbars nicer on webkit (chrome, vivaldi, etc)
+::-webkit-scrollbar
+    width: 0.75rem
+::-webkit-scrollbar-track
+    background: rgba(20,20,40,0.2)
+    border-radius: 0.1rem
+::-webkit-scrollbar-thumb
+    background: rgba(20,20,40,0.2)
+    border-radius: 0.3rem
+
 .three-pane
     height: 100%
     width: 100%
@@ -200,7 +210,7 @@ html, body
                 .word
                     flex: 1 1 auto
                     width: 100%
-                    overflow-x: hidden
+                    overflow: hidden
                     white-space: nowrap
 
                 .key
